--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,20 +9,20 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^1.0.0-next.21",
-    "@sveltejs/kit": "^1.0.0-next.184",
+    "@sveltejs/kit": "^1.0.0-next.186",
     "rimraf": "^3.0.2",
     "svelte": "^3.44.0",
     "svelte-preprocess": "^4.9.8",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.4"
   },
   "dependencies": {
-    "@app/library": "*",
+    "@app/library": "workspace:*",
     "prosemirror-example-setup": "^1.1.2",
     "prosemirror-model": "^1.14.3",
     "prosemirror-state": "^1.3.4",
     "prosemirror-transform": "^1.3.3",
-    "prosemirror-view": "^1.20.2",
-    "y-websocket": "^1.3.16",
-    "yjs": "^13.5.13"
+    "prosemirror-view": "^1.20.3",
+    "y-websocket": "^1.3.17",
+    "yjs": "^13.5.16"
   }
 }
